--- a/docs/docs/genai/prompt-version-mgmt/version-tracking/link-production-traces-to-app-versions.mdx
+++ b/docs/docs/genai/prompt-version-mgmt/version-tracking/link-production-traces-to-app-versions.mdx
@@ -39,7 +39,7 @@ Add the `LoggedModel` ID to your production environment configuration alongside 
 export DATABRICKS_HOST="https://your-workspace.databricks.com"
 export DATABRICKS_TOKEN="your-databricks-token"
 export MLFLOW_TRACKING_URI=databricks
-export MLFLOW_EXPERIMENT_NAME="/Shared/production-genai-app"
+export MLFLOW_EXPERIMENT_NAME="production-genai-app"
 
 # Add LoggedModel version tracking by specifying your LoggedModel ID
 export MLFLOW_ACTIVE_MODEL_ID="m-930352f2b0c246c9a8ac7df98a03cede"
