--- a/docs/docs/genai/prompt-version-mgmt/version-tracking/compare-app-versions.mdx
+++ b/docs/docs/genai/prompt-version-mgmt/version-tracking/compare-app-versions.mdx
@@ -5,7 +5,7 @@ description: Compare different LoggedModel versions to track improvements and id
 
 # Compare App Versions
 
-After [evaluating your customer support agent](/genai/prompt-version-mgmt/version-tracking/link-evaluation-results-and-traces-to-app-versions), let's make an improvement and compare the performance between versions. This guide shows how to track changes and objectively compare different versions of your application.
+After evaluating your customer support agent, let's make an improvement and compare the performance between versions. This guide shows how to track changes and objectively compare different versions of your application.
 
 ## Creating an Improved Version
 
