--- a/docs/docs/genai/prompt-version-mgmt/version-tracking/track-application-versions-with-mlflow.mdx
+++ b/docs/docs/genai/prompt-version-mgmt/version-tracking/track-application-versions-with-mlflow.mdx
@@ -244,7 +244,7 @@ The `LoggedModel` object provides access to all the metadata about your applicat
 
 ## Step 5: Link Evaluation Results to the Application Version
 
-To evaluate your application and link the results to this `LoggedModel` version, see **[Link Evaluation Results and Traces to App Versions](/genai/prompt-version-mgmt/version-tracking/link-evaluation-results-and-traces-to-app-versions)**. This guide covers how to use `mlflow.genai.evaluate()` to assess your application's performance and automatically associate the metrics, evaluation tables, and traces with your specific `LoggedModel` version.
+You can evaluate your application and link the results to this `LoggedModel` version using `mlflow.genai.evaluate()` to assess your application's performance and automatically associate the metrics, evaluation tables, and traces with your specific `LoggedModel` version.
 
 ## Next Steps
 
