--- a/docs/docs/genai/flavors/index.mdx
+++ b/docs/docs/genai/flavors/index.mdx
@@ -70,7 +70,7 @@ Once your integration is in place, take advantage of MLflow's full LLMOps platfo
 - [Notebook Tracing](/genai/getting-started/tracing/tracing-notebook)
 
 ### 🧪 Evaluation & QA
-- [LLM Evaluation Framework](/genai/getting-started/eval)
+- [LLM Evaluation Framework](https://docs.databricks.com/aws/en/mlflow3/genai/getting-started/eval.html)
 
 ### 🚀 Deployment & Monitoring
 - [Prompt Engineering UI](/genai/prompt-version-mgmt/prompt-engineering)
