--- a/docs/docs/genai/getting-started/connect-environment.mdx
+++ b/docs/docs/genai/getting-started/connect-environment.mdx
@@ -260,4 +260,4 @@ An MLflow Experiment is the container for your GenAI application. Learn more abo
 Now that your environment is connected to MLflow, try the other GenAI quickstarts:
 
 - **Instrument your app with tracing**: Follow the [IDE quickstart](/genai/getting-started/tracing/tracing-ide) or [Notebook quickstart](/genai/getting-started/tracing/tracing-notebook) to instrument your first GenAI app
-- **Evaluate your app's quality**: Use the [evaluation quickstart](/genai/getting-started/eval) to systematically test and improve your app's quality
+- **Evaluate your app's quality**: Use the [evaluation quickstart](https://docs.databricks.com/aws/en/mlflow3/genai/getting-started/eval.html) to systematically test and improve your app's quality
