--- a/docs/docs/genai/getting-started/index.mdx
+++ b/docs/docs/genai/getting-started/index.mdx
@@ -112,7 +112,7 @@ Systematically test and improve your application using LLM judges and custom met
 - Use LLM judges for quality metrics
 - Compare model versions objectively
 
-**[Learn how to evaluate your application →](/genai/getting-started/eval)**
+**[Learn how to evaluate your application →](https://docs.databricks.com/aws/en/mlflow3/genai/getting-started/eval.html)**
 
 ---
 
