--- a/docs/docs/genai/prompt-version-mgmt/version-tracking/compare-app-versions.mdx
+++ b/docs/docs/genai/prompt-version-mgmt/version-tracking/compare-app-versions.mdx
@@ -227,4 +227,4 @@ You can extend this pattern to:
 
 ## Next Steps
 
-- **[Monitor production performance](/genai/prompt-version-mgmt/version-tracking/link-production-traces-to-app-versions)** by linking traces to deployed versions
+You can now deploy your best performing version and monitor its performance in production by linking traces to deployed versions.
