--- a/docs/docs/genai/tracing/lightweight-sdk.mdx
+++ b/docs/docs/genai/tracing/lightweight-sdk.mdx
@@ -68,7 +68,7 @@ print(response.choices[0].message.content)
 The lightweight SDK works with various observability platforms. Choose your preferred option and follow the instructions to set up your tracing backend.
 
 <Tabs>
-  <TabItem value="self-hosting" label="Self-Hosted MLflow">
+  <TabItem value="self-hosting" label="Self-Hosted MLflow" default>
     <div class="flex-column">
       <div class="flex-row">
         <div class="flex-item">
@@ -93,7 +93,7 @@ The lightweight SDK works with various observability platforms. Choose your pref
     </div>
   </TabItem>
 
-  <TabItem value="databricks" label="Databricks" default>
+  <TabItem value="databricks" label="Databricks">
     <div class="flex-column">
       <div class="flex-row">
         <div class="flex-item">
