--- a/docs/docs/genai/eval-monitor/notebooks/huggingface-evaluation.ipynb
+++ b/docs/docs/genai/eval-monitor/notebooks/huggingface-evaluation.ipynb
@@ -140,7 +140,7 @@
     "with mlflow.start_run():\n",
     "    model_info = mlflow.transformers.log_model(\n",
     "        transformers_model=mpt_pipeline,\n",
-    "        artifact_path=\"mpt-7b\",\n",
+    "        name=\"mpt-7b\",\n",
     "        signature=signature,\n",
     "        registered_model_name=\"mpt-7b-chat\",\n",
     "    )"
