--- a/docs/docs/genai/eval-monitor/notebooks/question-answering-evaluation.ipynb
+++ b/docs/docs/genai/eval-monitor/notebooks/question-answering-evaluation.ipynb
@@ -185,7 +185,7 @@
     "    basic_qa_model = mlflow.openai.log_model(\n",
     "        model=\"gpt-4o-mini\",\n",
     "        task=openai.chat.completions,\n",
-    "        artifact_path=\"model\",\n",
+    "        name=\"model\",\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_prompt},\n",
     "            {\"role\": \"user\", \"content\": \"{question}\"},\n",
@@ -1200,7 +1200,7 @@
     "    professional_qa_model = mlflow.openai.log_model(\n",
     "        model=\"gpt-4o-mini\",\n",
     "        task=openai.chat.completions,\n",
-    "        artifact_path=\"model\",\n",
+    "        name=\"model\",\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_prompt},\n",
     "            {\"role\": \"user\", \"content\": \"{question}\"},\n",
@@ -1377,21 +1377,6 @@
    "source": [
     "results.tables[\"eval_results_table\"]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "e44bbe77-433a-4e03-a44e-d17eb6c06820",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
