--- a/docs/docs/genai/flavors/dspy/notebooks/dspy_quickstart.ipynb
+++ b/docs/docs/genai/flavors/dspy/notebooks/dspy_quickstart.ipynb
@@ -101,7 +101,7 @@
    "source": [
     "### Set Up LLM\n",
     "\n",
-    "After installing the relevant dependencies, let's leverage a Databricks foundational model serving endpoint as our LLM of choice. Here, will leverage OpenAI's `gpt-4o-mini` model."
+    "After installing the relevant dependencies, let's set up access to an OpenAI LLM. Here, will leverage OpenAI's `gpt-4o-mini` model."
    ]
   },
   {
@@ -139,7 +139,6 @@
     "# Define your model. We will use OpenAI for simplicity\n",
     "model_name = \"gpt-4o-mini\"\n",
     "\n",
-    "# Leverage default authentication inside the Databricks context (notebooks, workflows, etc.)\n",
     "# Note that an OPENAI_API_KEY environment must be present. You can also pass the token to dspy.LM()\n",
     "lm = dspy.LM(\n",
     "    model=f\"openai/{model_name}\",\n",
@@ -155,9 +154,7 @@
    "source": [
     "### Create MLflow Experiment\n",
     "\n",
-    "Create a new MLflow Experiment to track your DSPy models, metrics, parameters, and traces in one place. Although there is already a \"default\" experiment created in your workspace, it is highly recommended to create one for different tasks to organize experiment artifacts.\n",
-    "\n",
-    "***💡 Skip this step if you are running this tutorial on a Databricks Notebook. An MLflow experiment is automatically set up when you created any notebook.***\n"
+    "Create a new MLflow Experiment to track your DSPy models, metrics, parameters, and traces in one place. Although there is already a \"default\" experiment created in your workspace, it is highly recommended to create one for different tasks to organize experiment artifacts.\n"
    ]
   },
   {
