--- a/docs/docs/genai/flavors/openai/notebooks/openai-code-helper.ipynb
+++ b/docs/docs/genai/flavors/openai/notebooks/openai-code-helper.ipynb
@@ -105,7 +105,7 @@
     "### Initializing the MLflow Client\n",
     "\n",
     "Depending on where you are running this notebook, your configuration may vary for how you initialize the MLflow Client.\n",
-    "If you are uncertain about how to configure and use an MLflow Tracking server or what options are available (The easiest is to use the free managed service within the [Databricks Free Trial](https://mlflow.org/docs/latest/ml/getting-started/databricks-trial.html)), you can see [the guide to running notebooks here](https://www.mlflow.org/docs/latest//ml/getting-started/running-notebooks/) for more information on setting the tracking server uri and configuring access to either managed or self-managed MLflow tracking servers."
+    "If you are uncertain about how to configure and use an MLflow Tracking server or what options are available, you can see [the guide to running notebooks here](https://www.mlflow.org/docs/latest//ml/getting-started/running-notebooks/) for more information on setting the tracking server uri and configuring access to either managed or self-managed MLflow tracking servers."
    ]
   },
   {
