--- a/docs/docs/genai/getting-started/connect-environment.mdx
+++ b/docs/docs/genai/getting-started/connect-environment.mdx
@@ -1,5 +1,5 @@
 ---
-description: "Learn how to connect your development environment to MLflow for GenAI application development, whether using OSS MLflow or Managed MLflow (Databricks)."
+description: "Learn how to connect your development environment to MLflow for GenAI application development, whether using OSS MLflow or a managed offering."
 last_update:
   date: 2025-05-18
 ---
@@ -9,7 +9,7 @@ import TabItem from "@theme/TabItem";
 
 # Connect Your Development Environment to MLflow
 
-This guide shows you how to connect your development environment to an MLflow Experiment. MLflow supports both OSS MLflow (self-hosted) and Managed MLflow (Databricks) environments.
+This guide shows you how to connect your development environment to an MLflow Experiment. You can run MLflow on your local machine, self-host the open source MLflow service, or use a managed offering, such as Databricks Managed MLflow.
 
 :::note[MLflow Experiments]
 An MLflow Experiment is the container for your GenAI application. Learn more about the Experiment and what it contains in the [data model](/genai/data-model) section.
@@ -24,7 +24,7 @@ An MLflow Experiment is the container for your GenAI application. Learn more abo
     - **Local or Remote Server**: Access to run MLflow tracking server
 
   </TabItem>
-  <TabItem value="managed" label="Managed MLflow (Databricks)">
+  <TabItem value="managed" label="Databricks">
 
     - **Databricks Workspace**: Access to a Databricks workspace
 
