--- a/docs/docs/genai/prompt-version-mgmt/version-tracking/track-application-versions-with-mlflow.mdx
+++ b/docs/docs/genai/prompt-version-mgmt/version-tracking/track-application-versions-with-mlflow.mdx
@@ -47,7 +47,7 @@ Before running the examples below, configure your environment:
     ```
 
   </TabItem>
-  <TabItem value="databricks" label="Managed MLflow on Databricks">
+  <TabItem value="databricks" label="Databricks">
     ### Configure Databricks Authentication
 
     :::note
