--- a/docs/docs/genai/flavors/index.mdx
+++ b/docs/docs/genai/flavors/index.mdx
@@ -1,8 +1,8 @@
 import { CardGroup, SmallLogoCard } from "@site/src/components/Card";
 
-# MLflow Native GenAI Integrations
+# MLflow GenAI Packaging Integrations
 
-MLflow 3 delivers built-in support for the GenAI frameworks you know and love—no more boilerplate or glue code. Whether you're calling OpenAI directly, orchestrating chains with LangChain or LangGraph, indexing documents in LlamaIndex, wiring up agent patterns via ChatModel and ResponseAgent, or rolling your own with a PythonModel, MLflow gives you one consistent API, unified experiment tracking, and out-of-the-box reproducibility.
+MLflow 3 delivers built-in support for packaging and deploying applications written with the GenAI frameworks you depend on. Whether you're calling OpenAI directly, orchestrating chains with LangChain or LangGraph, indexing documents in LlamaIndex, wiring up agent patterns via ChatModel and ResponseAgent, or rolling your own with a PythonModel, MLflow provides native packaging and deployment APIs ("flavors") to streamline your path to production.
 
 ## Why MLflow Integrations?
 
