--- a/docs/docs/genai/prompt-version-mgmt/version-tracking/track-application-versions-with-mlflow.mdx
+++ b/docs/docs/genai/prompt-version-mgmt/version-tracking/track-application-versions-with-mlflow.mdx
@@ -60,9 +60,9 @@ Before running the examples below, configure your environment:
     import os
 
     # Set Databricks authentication (only needed when running outside Databricks)
-    os.environ["DATABRICKS_HOST"] = (
-        "https://your-workspace.databricks.com"  # Your workspace URL
-    )
+    os.environ[
+        "DATABRICKS_HOST"
+    ] = "https://your-workspace.databricks.com"  # Your workspace URL
     os.environ["DATABRICKS_TOKEN"] = "your-databricks-token"  # Your access token
     ```
 
